--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Nikhil Raj A
-email: nikhilrajnair.a@example.com
+email: nikhilrajnair.a@gmail.com
 description: "Frontend Developer with 7+ years experience in Angular, Ember.js, and React."
 baseurl: "" #
 url: "https://nikhilrajnair.github.io"
